[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "actionrepro"
version = "0.1.0"
description = "Turn GitHub Actions failures into local repro plans and PR evidence packs."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Yufeng He"}]
keywords = ["github-actions", "ci", "debugging", "pull-requests", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4", "build>=1.2", "twine>=5.0"]

[project.scripts]
actionrepro = "actionrepro.cli:main"

[project.urls]
Homepage = "https://github.com/he-yufeng/ActionRepro"
Issues = "https://github.com/he-yufeng/ActionRepro/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

